--- a/notebooks/chi2_jz.ipynb
+++ b/notebooks/chi2_jz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "e3e6d30b-4ae3-4b66-bdc5-ea8772208df3",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "import numpy as np\n",
     "from functools import lru_cache\n",
     "from scipy.optimize import minimize, minimize_scalar\n",
-    " from scipy.interpolate import interp1d\n",
+    "from scipy.interpolate import interp1d\n",
     "from scipy.integrate import solve_ivp\n",
     "import scipy.ndimage as sn\n",
     "\n",
@@ -33,7 +33,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "422f7c9a-5437-421b-b0db-5a30bf1b4440",
+   "id": "4b2a1772-824d-41c7-acb5-fa9546b295df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c63358-10bc-4042-872b-1c13837c67f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -48,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "b0afbb7d-e742-427c-9950-83eea51f331c",
    "metadata": {},
    "outputs": [
@@ -57,27 +65,39 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "delta: 8.697e+11\n",
+      "delta: 3.765e+10\n",
       "\n",
-      "CPU times: user 1.39 s, sys: 72.9 ms, total: 1.47 s\n",
-      "Wall time: 1.47 s\n"
+      "CPU times: user 1.3 s, sys: 21.6 ms, total: 1.32 s\n",
+      "Wall time: 1.32 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "de, c2, c2l = on.find_delta(10, 0.05, p_init=1, T2=10, Nshots=10, seed=42, d_init=1e8, d_fin=1e13, ndelta=100,\n",
-    "                 chi2_crit=2.71, squid_noise_ratio=0.0)\n",
+    "                 chi2_crit=2.71, squid_noise_ratio=0.0, B=0.1)\n",
     "print(\"\\ndelta: %.3e\\n\"%de)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "369dddcf-467b-4810-ad1a-80bd62adb398",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "delta: 3.765e+08\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\ndelta: %.3e\\n\"%(de/(100**(1.5)/10)))"
+   ]
   },
   {
    "cell_type": "code",
@@ -1131,7 +1151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
